# daemon

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
config/: daemon.example.toml
deploy/: daemon.toml.example  install.sh  lumo-daemon.service
docs/: 1-overview.md  2-authentication.md  3-commands.md  3.1-system-commands.md  3.2-file-commands.md  3.3-service-commands.md  3.4-package-commands.md  3.5-database-commands.md  3.6-ssl-commands.md  3.7-php-commands.md  3.8-nginx-commands.md  3.9-user-commands.md  4-configuration.md  5-security.md  6-audit-logging.md  7-wire-protocol.md
examples/: test_client.rs
src/: lib.rs  main.rs
src/audit/: entry.rs  logger.rs  mod.rs  sanitize.rs
src/auth/: hmac.rs  mod.rs  nonce.rs  peer_creds.rs  rate_limit.rs
src/commands/: mod.rs  registry.rs  traits.rs  types.rs
src/config/: mod.rs  settings.rs
src/error/: mod.rs  types.rs
src/executor/: mod.rs  subprocess.rs  timeout.rs
src/protocol/: mod.rs  request.rs  response.rs  wire.rs
src/services/: memcached.rs  mod.rs  mysql.rs  nginx.rs  php_fpm.rs  postgresql.rs  redis.rs  registry.rs  supervisor.rs  traits.rs
src/socket/: connection.rs  listener.rs  mod.rs
src/templates/: engine.rs  mod.rs
src/validation/: database.rs  domain.rs  mod.rs  package_name.rs  path.rs  repository.rs  service_name.rs  template_context.rs  uid_gid.rs  username.rs  whitelist.rs
templates/nginx/: site-ssl.conf.tera  site.conf.tera
templates/php-fpm/: pool.conf.tera
templates/services/: redis.conf.tera
tests/: daemon_integration.rs
(+38 files in other folders)
